[package]
name = "mqtt_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
lazy_static = "1.4.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"]}