[package]
name = "mqtt_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
bytes = "1"
arcstr = "1.1.5"
tokio-util = { version = "0.7.10", features=["rt"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"]}
env_logger = "0.11.2"
tokio-stream ={ version="0.1.15", features = ["net"]}
console-subscriber  = "*"
[dev-dependencies]
tokio-test = "0.4.3"

