[package]
name = "mqtt_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
bytes = "1"
arcstr = "1.1.5"
tokio-util = { version = "0.7.10", features=["rt"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"]}
env_logger = "0.11.3"
dashmap = "5.5.3"
[dev-dependencies]
tokio-test = "0.4.4"